--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "cron:run": "node --env-file=.env.local --import=tsx cron/publish-casts.ts"
   },
   "dependencies": {
+    "@coinbase/x402": "^0.6.6",
     "@neynar/nodejs-sdk": "^3.34.0",
     "@neynar/react": "^1.2.15",
+    "@tanstack/react-query": "^5.90.5",
+    "@wagmi/connectors": "^6.0.1",
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.2",
     "next": "15.5.6",
     "node-cron": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "viem": "^2.38.3",
+    "wagmi": "^2.18.1",
+    "x402-next": "^0.6.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
