--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^3.15.2",
     "next": "15.5.6",
     "node-cron": "^4.2.1",
+    "openai": "^6.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "ts-node": "^10.9.2",
